# zkp-rust

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.yaml
benches/: zkp_benchmark.rs
config/: server.toml
proto/: auth.proto
src/: client.rs  lib.rs  server.rs  zkp.rs  zkp_auth.rs
tests/: integration_tests.rs
