[package]
name = "zkp"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
num-bigint = { version = "0.4", features = ["rand"] }
rand = "0.8"
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.9"

[[bin]]
name = "server"
path = "./src/server.rs"

[[bin]]
name = "client"
path = "./src/client.rs"
